# hydrogen

./: .env  Cargo.toml  README.md  garbage.txt  should_contain.txt
.github/workflows/: rust.yml
crates/hydrogen_common/: Cargo.toml
crates/hydrogen_common/src/: lib.rs  models.rs  ring_buffer.rs
crates/hydrogen_crawler/: Cargo.toml  DOCKERFILE
crates/hydrogen_crawler/src/: example.rs
crates/hydrogen_ingestion/: Cargo.toml
crates/hydrogen_ingestion/src/: ingestor.rs  lib.rs  parser.rs
crates/hydrogen_processing/: Cargo.toml
crates/hydrogen_processing/src/: cleaner.rs  filters.rs  lib.rs  parser.rs  reduction.rs  transform.rs
crates/hydrogen_sink/: Cargo.toml
crates/hydrogen_sink/src/: sink.rs
crates/hydrogen_transform/: Cargo.toml
crates/hydrogen_transform/src/: transformer.rs
src/: goal.rs  main.rs  pipeline.rs
