[package]
name = "hydrogen"
version = "0.1.0"
edition = "2024"

[dependencies]
hydrogen_ingestion = { path = "crates/hydrogen_ingestion" }
hydrogen_transform = { path = "crates/hydrogen_transform" }
hydrogen_crawler = { path = "crates/hydrogen_crawler" }
hydrogen_processing = { path = "crates/hydrogen_processing" }
tokio = { version = "1.0", features = ["full"] }

[workspace]
members = [ 
    "crates/hydrogen_common", 
    "crates/hydrogen_ingestion",
    "crates/hydrogen_transform",
    "crates/hydrogen_crawler", 
    "crates/hydrogen_processing",
]


resolver = "2"

[profile.release]
opt-level = 3           
lto = "thin"            
codegen-units = 1       
panic = "abort"         
strip = true            

